index file changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>This is Home page</p>
     <h1>Home</h1>
     <div>
-        <p>Main landing page</p>
+        <p>Main landing pages</p>
     </div>
 </body>
 </html>
